--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ html {
   overflow-x: hidden;
   box-sizing: border-box;
   transition: all 0.5s ease; /* added transition to the switch theme functionality */
-  scroll-behavior: smooth; /* this makes the redirection of the anchor links in the nav menu work smoother */
 }
 
 .container {
